httpd_resources.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: httpd-24-rhel7
    name: httpd-24-rhel7
  spec:
    replicas: 1
    selector:
      app: httpd-24-rhel7
      deploymentconfig: httpd-24-rhel7
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftWebConsole
        creationTimestamp: null
        labels:
          app: httpd-24-rhel7
          deploymentconfig: httpd-24-rhel7
      spec:
        containers:
        - env:
          - name: MY_VAR_NAME
            value: IT WORKS
          image: registry.access.redhat.com/rhscl/httpd-24-rhel7@sha256:e4bbea24985cfa97fb7bea65d83ac3a80797a0f2b7f1ffce0b4dd484d2b3458d
          imagePullPolicy: Always
          name: httpd-24-rhel7
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: httpd-24-rhel7
    name: httpd-24-rhel7
  spec:
    clusterIP: 172.30.161.56
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      deploymentconfig: httpd-24-rhel7
    sessionAffinity: None
    type: ClusterIP
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: httpd-24-rhel7
    name: httpd-24-rhel7
  spec:
    host: httpd-24-rhel7-operators.192.168.64.10.nip.io
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: httpd-24-rhel7
      weight: 100
    wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
